# multidocqa

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup_dev.sh  train.py
misc/load_balance/: docker-compose.yaml  nginx.conf
multidocqa/: config.py  dataset.py  entailment_dataset.py  exceptions.py  llm_client.py  model.py  relevance_dataset.py  utils.py
multidocqa/common/: llm_providers.py  template_loader.py
multidocqa/tests/: test_config.py  test_entailment_dataset.py  test_llm_providers.py  test_relevance_dataset.py  test_template_loader.py  test_utils.py
notebooks/: entailment_dataset_exploration.ipynb  relevance_dataset_exploration.ipynb
scripts/: build_dataset.py  icl.py  icl_end2end.py  icl_entailment.py  sample_trajectories.py  scratchpad.ipynb  train.py  train_grpo.py  trajectory_analysis.ipynb
scripts/icl/: icl_end2end.py  icl_entailment.py
scripts/rl/: sample_trajectories.py
